# zamscript-

./: CMakeLists.txt  notes.txt
include/: load_files.hpp
src/: main.cpp
zamscript/: CMakeLists.txt
zamscript/include/: core.hpp  n.hpp  unit.hpp  zamscript.hpp
zamscript/include/command/: command.hpp  creat_unit.hpp
zamscript/include/parser/: parser.hpp  text_parser.hpp
zamscript/include/valueholder/: custom_value.hpp  intger.hpp  types.hpp  vh.hpp
zamscript/src/: core.cpp  unit.cpp
zamscript/src/parser/: text_parser.cpp
zamscript/src/valueholder/: vh.cpp
